--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <div class="redclass">Какой-то текст</div>
+    <div class="redclass">Какой-то текст22222</div>
+    <p>blablabla</p>
 </body>
 
 </html>
