--- a/index.html
+++ b/index.html
@@ -49,6 +49,19 @@
         #level {
             font-weight: 700;
         }
+
+        .firstpage_text_1 {
+            padding-top: 25%;
+        }
+
+        .firstpage_text_2 {
+            font-size: 0.8rem;
+            margin-top: 50px;
+        }
+
+        .social_img {
+            width: 4%;
+        }
     </style>
 </head>
 
@@ -76,6 +89,13 @@
                 </div>
                 <div class="firstpage_text_2">
                     Listen on
+                    <div>
+                        <img class="social_img" src="assets/images/social1.png" alt="social1">
+                        <img class="social_img" src="assets/images/social2.png" alt="social2">
+                        <img class="social_img" src="assets/images/social3.png" alt="social3">
+                        <img class="social_img" src="assets/images/social4.png" alt="social4">
+                        <img class="social_img" src="assets/images/social5.png" alt="social5">
+                    </div>
                 </div>
             </div>
         </div>
