--- a/index.html
+++ b/index.html
@@ -100,7 +100,11 @@
             </div>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <div>
+            <div></div>
+        </div>
+    </footer>
 </body>
 
 </html>
