Nav color hover

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             <div>
                 <img src="assets/images/castaway.png" alt="logo">
             </div>
-            <nav class="menu">
-                <a href="home.html">Home</a>
-                <a href="episodes.html">Episodes</a>
-                <a href="about.html">About</a>
-                <a href="contact.html">Contact</a>
+            <nav>
+                <a class="nav" href="home.html">Home</a>
+                <a class="nav" href="episodes.html">Episodes</a>
+                <a class="nav" href="about.html">About</a>
+                <a class="nav" href="contact.html">Contact</a>
             </nav>
         </div>
     </header>
