--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <main>
         <div class="firstpage">
             <div class="firstpage_img">
+                <div>
+                    <img id="arrows" src="assets/images/firstimgarrs.png" alt="">
+                </div>
                 <img id="firstimg" src="assets/images/firstimg.png" alt="firstimg">
             </div>
             <div class="firstpage_text">
@@ -36,19 +39,52 @@
                 <div class="firstpage_text_2">
                     Listen on
                     <div>
-                        <img class="social_img" src="assets/images/social1.png" alt="social1">
-                        <img class="social_img" src="assets/images/social2.png" alt="social2">
-                        <img class="social_img" src="assets/images/social3.png" alt="social3">
-                        <img class="social_img" src="assets/images/social4.png" alt="social4">
-                        <img class="social_img" src="assets/images/social5.png" alt="social5">
+                        <a href="social1.html">
+                            <img class="social_img" src="assets/images/social1.png" alt="social1"></a>
+                        <a href="social2.html">
+                            <img class="social_img" src="assets/images/social2.png" alt="social2"></a>
+                        <a href="social3.html">
+                            <img class="social_img" src="assets/images/social3.png" alt="social3"></a>
+                        <a href="social4.html">
+                            <img class="social_img" src="assets/images/social4.png" alt="social4"></a>
+                        <a href="social5.html">
+                            <img class="social_img" src="assets/images/social5.png" alt="social5"></a>
                     </div>
                 </div>
             </div>
         </div>
     </main>
     <footer>
-        <div>
+        <div class="footer">
+            <div class="footer_logo">
+                <div>
+                    <img src="assets/images/castaway.png" alt="logo">
+                </div>
+                <div>
+                    <a href="insta.html">
+                        <img src="assets/images/insta.png" alt="instagram"></a>
+                    <a href="twitter.html">
+                        <img src="assets/images/twitter.png" alt="twitter"></a>
+                    <a href="facebook.html">
+                        <img src="assets/images/facebook.png" alt="facebook"></a>
+                </div>
+            </div>
+            <div>
+                <a href=""></a><a href=""></a><a href=""></a><a href=""></a>
+            </div>
             <div></div>
+            <div>
+                <a href="social1.html">
+                    <img class="social_img" src="assets/images/social1.png" alt="social1"></a>
+                <a href="social2.html">
+                    <img class="social_img" src="assets/images/social2.png" alt="social2"></a>
+                <a href="social3.html">
+                    <img class="social_img" src="assets/images/social3.png" alt="social3"></a>
+                <a href="social4.html">
+                    <img class="social_img" src="assets/images/social4.png" alt="social4"></a>
+                <a href="social5.html">
+                    <img class="social_img" src="assets/images/social5.png" alt="social5"></a>
+            </div>
         </div>
     </footer>
 </body>
