--- a/index.html
+++ b/index.html
@@ -69,10 +69,20 @@
                         <img src="assets/images/facebook.png" alt="facebook"></a>
                 </div>
             </div>
-            <div>
-                <a href=""></a><a href=""></a><a href=""></a><a href=""></a>
+            <div class="footer_links">
+                <a href="home.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="episodes.html">Episodes</a>
+                <a href="contact.html">Contact</a>
             </div>
-            <div></div>
+            <div class="footer_links">
+                <a href="">Style Guide</a>
+                <a href="">Instructions</a>
+                <a href="">Changelog</a>
+                <a href="">Credit</a>
+                <a href="">Powered by Webflow</a>
+                <a href="">Licenses</a>
+            </div>
             <div>
                 <a href="social1.html">
                     <img class="social_img" src="assets/images/social1.png" alt="social1"></a>
