links in footer

--- a/index.html
+++ b/index.html
@@ -70,18 +70,18 @@
                 </div>
             </div>
             <div class="footer_links">
-                <a href="home.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="episodes.html">Episodes</a>
-                <a href="contact.html">Contact</a>
+                <a class="links" href="home.html">Home</a>
+                <a class="links" href="about.html">About</a>
+                <a class="links" href="episodes.html">Episodes</a>
+                <a class="links" href="contact.html">Contact</a>
             </div>
             <div class="footer_links">
-                <a href="">Style Guide</a>
-                <a href="">Instructions</a>
-                <a href="">Changelog</a>
-                <a href="">Credit</a>
-                <a href="">Powered by Webflow</a>
-                <a href="">Licenses</a>
+                <a class="links" href="">Style Guide</a>
+                <a class="links" href="">Instructions</a>
+                <a class="links" href="">Changelog</a>
+                <a class="links" href="">Credit</a>
+                <a class="links" href="">Powered by Webflow</a>
+                <a class="links" href="">Licenses</a>
             </div>
             <div>
                 <a href="social1.html">
